# minimal_transducer

./: ChangeLog.md  LICENSE  README.md  minimal-transducer.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: CompactTransducer.hs  JsonTransducer.hs  Main.hs  Minimal.hs  Transducer.hs
