name:                minimal-transducer
version:             0.1.0.0

synopsis:            Minimal transducer builder

description:         A tool for building a minimal subsequential transducer
                     from a dictionary.

homepage:            https://github.com/DexterLB/minimal-transducer#readme

license:             MIT
license-file:        LICENSE
author:              dexterlb@qtrp.org
maintainer:          dexterlb@qtrp.org
copyright:           2017 Angel Angelov
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minimal, Transducer, CompactTransducer, JsonTransducer
  build-depends:       base >=4.9 && <4.10
                     , unordered-containers >=0.2
                     , hashable >=1.2, text >=1.2
                     , conduit >=1.2, conduit-combinators >=1.1
                     , resourcet >=1.1, vector >=0.12, aeson >=1.0
                     , Unique >=0.4
  default-language:    Haskell2010

executable minimal-transducer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.9 && <4.10, minimal-transducer
                     , unordered-containers >=0.2
                     , hashable >=1.2, text >=1.2
                     , conduit >=1.2, conduit-combinators >=1.1
                     , resourcet >=1.1, vector >=0.12, aeson >= 1.0
                     , Unique >=0.4
  default-language:    Haskell2010

test-suite minimal-transducer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minimal-transducer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/minimal-transducer
